--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="d-flex w-100" id="algo">
       <img
         src="https://media.istockphoto.com/id/1372099741/es/foto/mujer-joven-viendo-video-a-pedido-en-su-televisor.jpg?s=612x612&w=0&k=20&c=0_PO_-96R0Ea8yAk_T0uVm5miqDg5gKOvnUcFcVmHmc="
-        alt="cine">
+        alt="cine" id="imagenPrincipal">
     </div>
 
     <br>
