--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link type="text/css" href="front-end/css/styles.css" rel="stylesheet">
+  <link type="text/css" href="https://github.com/Celina-G/CaC-proyecto-final/blob/main/front-end/css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -17,7 +17,7 @@
 
   <!-- ENCABEZADO -->
 
-  <header class="container-fluid colorPrincipal">
+  <header class="container-fluid colorPrincipal w-100">
     <nav class="navbar navbar-expand-lg" id="menu" style="background-color: #9f3647;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -57,7 +57,7 @@
     <div class="d-flex w-100" id="algo">
       <img
         src="https://media.istockphoto.com/id/1372099741/es/foto/mujer-joven-viendo-video-a-pedido-en-su-televisor.jpg?s=612x612&w=0&k=20&c=0_PO_-96R0Ea8yAk_T0uVm5miqDg5gKOvnUcFcVmHmc="
-        alt="cine" id="imgPrincipal">
+        alt="cine" class="w-100" id="imagenPrincipal">
     </div>
 
     <br>
