--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <!-- ENCABEZADO -->
 
-  <header class="container-fluid colorPrincipal w-100">
+  <header class="container-fluid colorPrincipal flex-fill">
     <nav class="navbar navbar-expand-lg" id="menu" style="background-color: #9f3647;">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -67,7 +67,7 @@
         <p class="fw-bold fs-2 text-center">Encuentra películas</p>
       </div>
       <form class="row row-cols g-3 align-items-center" role="search">
-        <div class="col align-self-center"><input class="form-control me-2" type="search" placeholder="Search"
+        <div class="col-9 align-self-center"><input class="form-control me-2" type="search" placeholder="Search"
             aria-label="Search"></div>
         <div class="col-2"><button class="btn btn-outline-success" type="submit">Search</button></div>
       </form>
